--- a/app/globals.css
+++ b/app/globals.css
@@ -1,75 +1,15 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  --white: #fff;
+  --stroke: rgba(0, 0, 0, 0.1);
+  --off-white: #fafafa;
+  --black: #000;
+  --green: #00703a;
+  --shadow: -4px 2px 10px 0 rgba(0, 0, 0, 0.01),
+    -16px 9px 10px 0 rgba(0, 0, 0, 0.01);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
   }
 }
 
@@ -86,13 +26,8 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: var(--black);
+  background: var(--off-white);
 }
 
 a {
@@ -104,4 +39,60 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+.fs-display {
+  font-weight: 400;
+  font-size: 2.5rem;
+  line-height: 1.25;
+  letter-spacing: -0.03125rem;
+}
+
+.fs-h1 {
+  font-weight: 400;
+  font-size: 1.5rem;
+  line-height: 1.25;
+  letter-spacing: -0.03125rem;
+}
+
+.fs-title {
+  font-weight: 400;
+  font-size: 0.875rem;
+  line-height: 1.25;
+  letter-spacing: -0.03125rem;
+}
+
+.fs-subtitle {
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 1.25;
+  letter-spacing: -0.03125rem;
+  text-transform: uppercase;
+}
+
+.fs-body {
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 1.25;
+  letter-spacing: -0.03125rem;
+}
+
+.color-white {
+  color: var(--white);
+}
+
+.color-off-white {
+  color: var(--off-white);
+}
+
+.color-stroke {
+  color: var(--stroke);
+}
+
+.color-black {
+  color: var(--black);
+}
+
+.color-green {
+  color: var(--green);
 }
