--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,3 +1,5 @@
+@use "breakpoints" as *;
+
 .main {
   display: flex;
   padding: 40px;
@@ -5,11 +7,18 @@
   gap: 20px;
   width: 100%;
   min-height: 100vh;
+
+  @include size('md') {
+    flex-direction: column;
+  }
 }
 
 .sidebar {
   width: 100%;
   max-width: 239px;
+  @include size('md') {
+    max-width: unset;
+  }
 }
 
 .content {
