--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,3 +1,5 @@
+@use "breakpoints" as *;
+
 :root {
   --white: #fff;
   --stroke: rgba(0, 0, 0, 0.1);
@@ -6,11 +8,6 @@
   --green: #00703a;
   --shadow: -4px 2px 10px 0 rgba(0, 0, 0, 0.01),
     -16px 9px 10px 0 rgba(0, 0, 0, 0.01);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-  }
 }
 
 * {
@@ -35,17 +32,15 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
-
 .fs-display {
   font-weight: 400;
   font-size: 2.5rem;
   line-height: 1.25;
   letter-spacing: -0.03125rem;
+
+  @include size('md') {
+    font-size: 1.25rem;
+  }
 }
 
 .fs-h1 {
