--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,29 +1,66 @@
 @use "breakpoints" as *;
+@use "sizes" as *;
 
 .main {
-  display: flex;
+  display: grid;
+  grid-template-columns: 239px auto;
+  grid-auto-rows: min-content;
   padding: 40px;
   max-width: 1440px;
-  gap: 20px;
+  column-gap: 20px;
+  row-gap: 48px;
   width: 100%;
   min-height: 100vh;
+  margin: 0 auto;
 
   @include size('md') {
-    flex-direction: column;
+    padding: $s5;
+    row-gap: $s5;
   }
 }
 
-.sidebar {
+.topbar {
   width: 100%;
-  max-width: 239px;
+  height: 40px;
+  grid-row: 1;
+  grid-column: 1 / span 2;
+
+  &__image {
+    height: 40px;
+  }
+
   @include size('md') {
-    max-width: unset;
+    height: 24px;
+    &__image {
+      height: 24px;
+    }
+  }
+}
+
+
+.sidebar {
+  grid-row: 2;
+  grid-column: 1;
+  @include size('md') {
+    grid-row: 2;
+    grid-column: 1 / span 2;
   }
 }
 
 .content {
-  width: 100%;
+  max-width: 100%;
+  grid-row: 2;
+  grid-column: 2;
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  gap: $s6;
+
+  @include size('md') {
+    gap: $s4;
+    @include size('md') {
+      grid-row: 3;
+      grid-column: 1 / span 2;
+    }
+  }
 }
+
