--- a/components/Badge/Badge.module.scss
+++ b/components/Badge/Badge.module.scss
@@ -1,8 +1,10 @@
+@use "sizes" as *;
+
 .badge {
   border: 0.6px solid var(--stroke);
-  border-radius: 8px;
+  border-radius: $s2;
   background: var(--white);
-  padding: 8px 12px;
+  padding: $s2 $s3;
 }
 
 .selected {
@@ -16,5 +18,5 @@
 }
 
 .small {
-  padding: 8px;
+  padding: $s2;
 }
